--- a/APPS/tutget-main/tutget-ui/src/app/components/main/main.component.html
+++ b/APPS/tutget-main/tutget-ui/src/app/components/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="mt-4">
-  <p>Find your tutor today!</p>
+  <p>Find your tutor today!!</p>
 </div>
 <div>
   <img src="./assets/images/istockphoto.jpeg">
