--- a/APPS/tutget-main/tutget-ui/src/app/utilities/header/header.component.html
+++ b/APPS/tutget-main/tutget-ui/src/app/utilities/header/header.component.html
@@ -6,7 +6,9 @@
 <div class="logo-container">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
-      <img class="logo" src="./assets/images/tutget-logo.jpg">
+        <a routerLink="/">
+            <img class="logo" src="./assets/images/tutget-logo.jpg">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,6 +22,7 @@
                 </li> -->
             </ul>
             <ul class="navbar-nav">
+                <a class="nav-link hover-link" routerLink="/qna">QnA Boards</a>
                 <a class="nav-link hover-link" href="#">Register</a>
                 <a class="nav-link hover-link" href="#">Login</a>
                 <!-- <li class="nav-item dropdown">
