--- a/APPS/tutget-main/tutget-ui/src/app/components/listing/create-listing/create-listing.component.html
+++ b/APPS/tutget-main/tutget-ui/src/app/components/listing/create-listing/create-listing.component.html
@@ -1,8 +1,17 @@
-<div class="container-fluid mt-4" *ngIf="!listingId">
+<div class="container-fluid mt-4" *ngIf="!submitted">
   <div class="row row-cols-1 justify-content-center">
     <div class="col-sm-8 mb-3 mt-2">
-      <div class="title mb-3">Post a listing to find your private tutor!</div>
+      <div class="title mb-3" *ngIf="!editMode">Post a listing to find your private tutor!</div>
+      <div class="mb-4" *ngIf="editMode"><a style="color: rgb(17, 56, 145);" href="#" [routerLink]="'/listing/' + this.createListingForm.id">&#60; Back</a></div>
+      <div class="title mb-2" *ngIf="editMode">Edit Listing</div>
     </div>
+  </div>
+  <div class="row row-cols-1 justify-content-center mb-sm-2" *ngIf="editMode">
+    <div class="col-sm-4 mb-3">
+      <div class="subtitle mb-3">Listing ID</div>
+      <input type="search" class="form-control" [(ngModel)]="listingId"  disabled/>
+    </div>
+    <div class="col-sm-4 mb-3"></div>
   </div>
   <div class="row row-cols-1 justify-content-center">
       <div class="col-sm-4 mb-3">
@@ -113,18 +122,19 @@
           <textarea class="form-control" [(ngModel)]="createListingForm.description" maxlength="50"></textarea>
       </div>
     </div>
-    <div class="row  justify-content-center mt-5">
+    <div class="row justify-content-center mt-5">
       <div class="col-sm-8 mb-3" style="text-align: right;">
         <app-single-button buttonTitle="Submit" (eventEmit)="submit()" [rounderStyle]="true"></app-single-button>
       </div>
     </div>
 </div>
-<div class="container-fluid" *ngIf="listingId">
+<div class="container-fluid" *ngIf="submitted">
   <div class="row row-cols-1 justify-content-center">
     <div class="col justify-content-center mt-3">
       <div class="title" style="text-align: center;">
           <div class="tick-container">✔</div>&nbsp;
-            <div class="mt-4" style="font-size: x-large">Successfully Listed</div>
+            <div class="mt-4" style="font-size: x-large" *ngIf="!editMode">Successfully Listed</div>
+            <div class="mt-4" style="font-size: x-large" *ngIf="editMode">Successfully Updated</div>
       </div>
     </div>
   </div>
@@ -132,49 +142,6 @@
     <span style="font-weight: bold">{{ listingId }}</span>
   </div>
   <div class="mt-5" style="text-align: center;">
-    <app-single-button [longerStyle]="true" buttonTitle="View Listing"></app-single-button>
+    <app-single-button [longerStyle]="true" buttonTitle="View Listing" (eventEmit)="viewListing()"></app-single-button>
   </div>
 </div>
-
-<!-- <div class="d-flex justify-content-center">
-  <div class="row">
-    <div class="col-12 mb-4">
-      Login
-    </div>
-  </div>
-</div> -->
-
-
-
-      <!-- <div class="form-check">
-        <div class="row">
-          <div class="col-sm-1 mb-4">
-            <input class="form-check-input" type="checkbox" (change)="flipDayIndex(0)"><label>Monday</label>
-          </div>
-          <div class="col-sm-2 mb-4">
-            <select class="form-select" [(ngModel)]="createListingForm.acadSubject">
-              <option value="">Please select</option>
-              <option *ngFor="let subj of academicLvlSubjectList" [value]="subj">{{ academicSubjectList.get(subj) }}</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="mb-4">
-          <input class="form-check-input" type="checkbox" (change)="flipDayIndex(1)"><label>Tuesday</label>
-        </div>
-        <div class="mb-4">
-          <input class="form-check-input" type="checkbox" (change)="flipDayIndex(2)"><label>Wednesday</label>
-        </div>
-        <div class="mb-4">
-          <input class="form-check-input" type="checkbox" (change)="flipDayIndex(3)"><label>Thursday</label>
-        </div>
-        <div class="mb-4">
-          <input class="form-check-input" type="checkbox" (change)="flipDayIndex(4)"><label>Friday</label>
-        </div>
-        <div class="mb-4">
-          <input class="form-check-input" type="checkbox" (change)="flipDayIndex(5)"><label>Saturday</label>
-        </div>
-        <div class="mb-4">
-          <input class="form-check-input" type="checkbox" (change)="flipDayIndex(6)"><label>Sunday</label>
-        </div>
-      </div> -->
