--- a/APPS/tutget-main/tutget-ui/src/app/utilities/header/header.component.html
+++ b/APPS/tutget-main/tutget-ui/src/app/utilities/header/header.component.html
@@ -20,10 +20,13 @@
                 </li> -->
             </ul>
             <div style="padding-right: 20px">
+                <app-single-button buttonTitle="Proceed to Payment" (eventEmit)="createPayment()"></app-single-button>
+            </div>
+            <div style="padding-right: 20px">
               <app-single-button buttonTitle="Create Listing" (eventEmit)="createListing()"></app-single-button>
             </div>
             <ul class="navbar-nav">
-                <a class="nav-link hover-link" routerLink="/qna">QnA Boards</a>
+                <a class="nav-link hover-link" routerLink="/qna">QnA Board</a>
                 <a class="nav-link hover-link" href="#">Register</a>
                 <a class="nav-link hover-link" href="#">Login</a>
                 <!-- <li class="nav-item dropdown">
