--- a/APPS/tutget-main/tutget-ui/src/app/components/listing/view-listing/view-listing.component.html
+++ b/APPS/tutget-main/tutget-ui/src/app/components/listing/view-listing/view-listing.component.html
@@ -1,4 +1,7 @@
 <div class="container-fluid mt-4" *ngIf="!deleted">
+  <div *ngIf="enableAd" class="row justify-content-center mb-2">
+    <img src="../../../../assets/images/ad.jpg" class="advert">
+  </div>
   <div class="row row-cols-1 justify-content-center">
     <div class="col-md-9 col-lg-7 mb-3 mt-2">
       <div class="title mb-3">Listing Details</div>
