--- a/APPS/tutget-main/tutget-ui/src/app/components/qna/qna-view/qna.component.html
+++ b/APPS/tutget-main/tutget-ui/src/app/components/qna/qna-view/qna.component.html
@@ -35,6 +35,11 @@
                                 <h4>{{ question.questionTitle }}</h4>
                             </a>
                             <p>{{ question.posterName }} asked on {{ question.postDate }}</p>
+                            
+                            <div class="question-tags">
+                                <span class="badge bg-primary">{{ question.acadLvl }}</span>
+                                <span class="badge bg-primary">{{ question.acadSubj }}</span>
+                            </div>
                         </div>
                     </div>
                 </div>
