--- a/APPS/tutget-main/tutget-ui/src/app/components/qna/qna-view/qna-view-question/qna-view-question.component.html
+++ b/APPS/tutget-main/tutget-ui/src/app/components/qna/qna-view/qna-view-question/qna-view-question.component.html
@@ -4,6 +4,11 @@
             <h1>{{ question?.questionTitle }}</h1>
             <p>{{ question?.qnaString }}</p>
             <p>{{ question?.posterName }} asked on {{ question?.postDate }}</p>
+            
+            <div class="question-tags">
+                <span class="badge bg-primary">{{ question?.acadLvl }}</span>
+                <span class="badge bg-primary">{{ question?.acadSubj }}</span>
+            </div>
     </div>
     <div class="py-4">
         <ul class="nav nav-pills">
@@ -24,7 +29,7 @@
                             </p>
                         </div>
                         <div class="col-10">
-                            <h5>{{ answer.qnaString }}</h5>
+                            <p>{{ answer.qnaString }}</p>
                             <p>{{ answer.posterName }} answered on {{ answer.postDate }}</p>
                         </div>
                     </div>
@@ -33,6 +38,22 @@
             <!-- <button type="button" (click)="onViewQuestion(question)" [class.selected]="question === selectedQuestion">View Question</button> -->
         </li>
     </ul>
+</div>
+
+
+<div class="container pt-5">
+    <h2>Post Your Answer</h2>
+    <div class="form-group">
+        <div class="py-2">
+            <textarea class="form-control" id="questionBody" rows="3" [(ngModel)]="createAnswerForm.qnaString" placeholder="Your answer here..."></textarea>
+        </div>
+
+        <br>
+        
+        <button type="submit" class="btn btn-primary float-end" (click)="submit()">
+            <i class="fa-solid fa-plus"></i> Post Answer
+        </button>
+    </div>
     <br>
     <!-- <app-qna-view-question [question]="selectedQuestion"></app-qna-view-question> -->
 </div>
