--- a/APPS/tutget-main/tutget-ui/src/app/components/listing/view-listing/view-listing.component.css
+++ b/APPS/tutget-main/tutget-ui/src/app/components/listing/view-listing/view-listing.component.css
@@ -34,7 +34,8 @@ table {
 
 } */
 
-.div-button:hover{
+.div-button:hover,
+.div-button-2:hover{
   background-color: #375998;
   transition: 0.3s;
   color: white;
@@ -51,7 +52,6 @@ table {
   border: 1px solid #7f9acc;
   border-radius: 0.2rem;
   color: #375998;
-
 }
 
 .div-button:active{
@@ -62,3 +62,32 @@ table {
   height: 130px;
   width: 650px;
 }
+
+.div-button-2{
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  background-color: white;
+  text-align: center;
+  font-weight: 500;
+  border: 1px solid #7f9acc;
+  border-radius: 0.2rem;
+  color: #375998;
+  width: 100px;
+  cursor: pointer;
+}
+
+/* .div-button-disabled{
+  background-color: rgba(0, 0, 0,0.05);
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  margin: 1.5rem;
+  text-align: left;
+  font-weight: 500;
+  border: 1px solid #7f9acc;
+  border-radius: 0.2rem;
+  color: #8b8b8b;
+  cursor: pointer;
+
+} */
+
+
