--- a/APPS/tutget-main/tutget-ui/src/app/utilities/header/header.component.html
+++ b/APPS/tutget-main/tutget-ui/src/app/utilities/header/header.component.html
@@ -24,8 +24,9 @@
             </div>
             <ul class="navbar-nav">
                 <a class="nav-link hover-link" routerLink="/qna">QnA Boards</a>
-                <a class="nav-link hover-link" href="#">Register</a>
-                <a class="nav-link hover-link" href="#">Login</a>
+<!--                <a class="nav-link hover-link" href="#">Register</a>-->
+                <a class="nav-link hover-link" routerLink="/login">Login</a>
+<!--                <a class="nav-link hover-link" routerLink="/profile">Profile</a>-->
                 <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Menu </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
