--- a/APPS/tutget-main/tutget-ui/src/app/components/payment/payment.component.html
+++ b/APPS/tutget-main/tutget-ui/src/app/components/payment/payment.component.html
@@ -7,48 +7,38 @@
     <div class="col-md-5 col-lg-4 order-md-last">
       <h4 class="d-flex justify-content-between align-items-center mb-3">
         <span class="text-primary">Your cart</span>
-        <span class="badge bg-primary rounded-pill">3</span>
       </h4>
       <ul class="list-group mb-3">
         <li class="list-group-item d-flex justify-content-between lh-sm">
           <div>
-            <h6 class="my-0">Product name</h6>
-            <small class="text-muted">Brief description</small>
+            <h6 class="my-0">Tutor ID</h6>
+            <small class="text-muted">Assigned</small>
           </div>
-          <span class="text-muted">$12</span>
+          <span class="text-muted">{{ assignedTutorId }}</span>
         </li>
         <li class="list-group-item d-flex justify-content-between lh-sm">
           <div>
-            <h6 class="my-0">Second product</h6>
-            <small class="text-muted">Brief description</small>
+            <h6 class="my-0">Subject</h6>
           </div>
-          <span class="text-muted">$8</span>
+          <span class="text-muted">{{ acadLvl }} - {{ acadSubject }}</span>
         </li>
         <li class="list-group-item d-flex justify-content-between lh-sm">
           <div>
-            <h6 class="my-0">Third item</h6>
-            <small class="text-muted">Brief description</small>
+            <h6 class="my-0">Total hours</h6>
           </div>
-          <span class="text-muted">$5</span>
+          <span class="text-muted">{{ totalHours }}</span>
         </li>
-        <li class="list-group-item d-flex justify-content-between bg-light">
-          <div class="text-success">
-            <h6 class="my-0">Promo code</h6>
-            <small>EXAMPLECODE</small>
+        <li class="list-group-item d-flex justify-content-between lh-sm">
+          <div>
+            <h6 class="my-0">Hourly Rate</h6>
           </div>
-          <span class="text-success">−$5</span>
+          <span class="text-muted">${{ hourlyRate }}/hr</span>
         </li>
         <li class="list-group-item d-flex justify-content-between">
-          <span>Total (USD)</span>
-          <strong>$20</strong>
+          <h6 class="my-0">Total (SGD)</h6>
+          <small class="text-muted"><strong>${{ computedTotal}}</strong></small>
         </li>
       </ul>
-    <form class="card p-2">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Promo code">
-          <button type="submit" class="btn btn-secondary">Redeem</button>
-        </div>
-      </form>
     </div>
     
     <div class="col-md-7 col-lg-8">
@@ -143,11 +133,11 @@
 
           <div class="col-md-3">
             <div class="form-group">
-              <label for="zip">ZIP Code</label>
-              <input type="text" id="zip" formControlName="zip" class="form-control" required>
-              <div *ngIf="checkoutForm.get('zip')?.hasError('required') && checkoutForm.get('zip')?.touched"
+              <label for="postal">Postal Code</label>
+              <input type="text" id="postal" formControlName="postal" class="form-control" required>
+              <div *ngIf="checkoutForm.get('postal')?.hasError('required') && checkoutForm.get('postal')?.touched"
                 class="invalid-feedback">
-                ZIP Code is required.
+                Postal Code is required.
               </div>
             </div>
           </div>
@@ -160,15 +150,15 @@
         <div class="my-3">
           <div class="form-group">
             <div class="form-check">
-              <input type="radio" id="creditCard" formControlName="paymentMethod" value="creditCard" class="form-check-input" name="paymentOptions" required checked>
+              <input type="radio" id="creditCard" formControlName="paymentMethod" value="creditCard" class="form-check-input" name="paymentMethod" required checked>
               <label for="creditCard" class="form-check-label">Credit Card</label>
             </div>
             <div class="form-check">
-              <input type="radio" id="debitCard" formControlName="paymentMethod" value="debitCard" class="form-check-input" name="paymentOptions" required>
+              <input type="radio" id="debitCard" formControlName="paymentMethod" value="debitCard" class="form-check-input" name="paymentMethod" required>
               <label for="debitCard" class="form-check-label">Debit Card</label>
             </div>
             <div class="form-check">
-              <input type="radio" id="paypal" formControlName="paymentMethod" value="paypal" class="form-check-input" name="paymentOptions" required>
+              <input type="radio" id="paypal" formControlName="paymentMethod" value="paypal" class="form-check-input" name="paymentMethod" required>
               <label for="paypal" class="form-check-label">Paypal</label>
             </div>
           </div>
@@ -188,13 +178,13 @@
 
           <div class="col-md-6">
             <div class="form-group">
-              <label for="creditCardNumber">Credit Card Number</label>
-              <input type="text" id="creditCardNumber" formControlName="creditCardNumber" class="form-control" required>
-              <div *ngIf="checkoutForm.get('creditCardNumber')?.hasError('required') && checkoutForm.get('creditCardNumber')?.touched"
+              <label for="creditCardNum">Credit Card Number</label>
+              <input type="text" id="creditCardNum" formControlName="creditCardNum" class="form-control" required>
+              <div *ngIf="checkoutForm.get('creditCardNum')?.hasError('required') && checkoutForm.get('creditCardNum')?.touched"
                 class="invalid-feedback">
                 Credit Card Number is required.
               </div>
-              <div *ngIf="checkoutForm.get('creditCardNumber')?.hasError('pattern') && checkoutForm.get('creditCardNumber')?.touched"
+              <div *ngIf="checkoutForm.get('creditCardNum')?.hasError('pattern') && checkoutForm.get('creditCardNum')?.touched"
                 class="invalid-feedback">
                 Please enter a valid 16-digit credit card number.
               </div>
