--- a/APPS/tutget-main/tutget-ui/src/app/utilities/header/header.component.html
+++ b/APPS/tutget-main/tutget-ui/src/app/utilities/header/header.component.html
@@ -28,7 +28,7 @@
             <ul class="navbar-nav">
                 <a class="nav-link hover-link" routerLink="/qna">QnA Board</a>
                 <a class="nav-link hover-link" href="#">Register</a>
-                <a class="nav-link hover-link" href="#">Login</a>
+                <a class="nav-link hover-link" routerLink="/login">Login</a>
                 <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Menu </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
