--- a/APPS/tutget-main/tutget-ui/src/app/components/user/login/login.component.html
+++ b/APPS/tutget-main/tutget-ui/src/app/components/user/login/login.component.html
@@ -1,6 +1,9 @@
 <div class="row row-cols-1 justify-content-center">
   <div class="col-sm-8 mb-3 mt-2">
-    <div class="title mb-3">Welcome to login page</div>
+    <div class="title mb-3">Welcome to login page!</div>
+  </div>
+  <div class="col-sm-8 mb-3 mt-2" *ngIf="userForm">
+    <div class="title mb-3">Hello {{userForm!.firstName}}!</div>
   </div>
 </div>
 <div class="container-fluid" *ngIf="loginSuccess">
@@ -12,47 +15,74 @@
       </div>
     </div>
   </div>
-  <div class="row row-cols-1 justify-content-center">
-    <div class="col justify-content-center mt-3">
-      <div class="title" style="text-align: center;">
-        <div class="tick-container">✔</div>&nbsp;
-        <div class="mt-4" style="font-size: x-large">{{ userForm }}</div>
-      </div>
-    </div>
-  </div>
-  <div class="row row-cols-1 justify-content-center">
-    <div class="col justify-content-center mt-3">
-      <div class="title" style="text-align: center;">
-        <div class="tick-container">✔</div>&nbsp;
-        <div class="mt-4" style="font-size: x-large">{{ userForm2 }}</div>
-      </div>
-    </div>
-  </div>
+</div>
+<!--  <div class="row row-cols-1 justify-content-center">-->
+<!--    <div class="col justify-content-center mt-3">-->
+<!--      <div class="title" style="text-align: center;">-->
+<!--        <div class="tick-container">✔</div>&nbsp;-->
+<!--        <div class="mt-4" style="font-size: x-large">{{ userForm!.userID }}</div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--  <div class="row row-cols-1 justify-content-center">-->
+<!--    <div class="col justify-content-center mt-3">-->
+<!--      <div class="title" style="text-align: center;">-->
+<!--        <div class="tick-container">✔</div>&nbsp;-->
+<!--        <div class="mt-4" style="font-size: x-large">{{ userForm2!.userID }}</div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
 <!--  <div class="mt-3" style="font-size: large; text-align: center;">Your listing ID:-->
 <!--    <span style="font-weight: bold">{{ listingId }}</span>-->
 <!--  </div>-->
 <!--  <div class="mt-5" style="text-align: center;">-->
 <!--    <app-single-button [longerStyle]="true" buttonTitle="View User"></app-single-button>-->
 <!--  </div>-->
+
+
+<div class="container-fluid" *ngIf="loginErr">
+  <div class="row row-cols-1 justify-content-center">
+    <div class="col justify-content-center mt-3">
+      <div class="title" style="text-align: center;">
+<!--        <div class="tick-container">✔</div>&nbsp;-->
+        <div class="mt-4" style="font-size: x-large">{{ loginErr }}</div>
+      </div>
+    </div>
+  </div>
 </div>
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm)">
+
+<!--<div *ngIf="loginName">-->
+<!--{{loginName}}-->
+<!--</div>-->
+
+<!--  <div>{{userForm}}</div>-->
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm)" *ngIf="!userForm" >
   <div>
+    <div *ngIf="invalid">
+      Please provide user name and password.
+    </div>
     <label>
       User Name:
       <input formControlName="userName" placeholder="StudentSam1">
     </label>
-    <div *ngIf="loginForm.get('userName').invalid && (loginForm.get('name').dirty || loginForm.get('name').touched)">
-      Please provide user name.
-    </div>
+<!--    <div *ngIf="loginForm.get('userName')!.invalid && (loginForm.get('name')!.dirty || loginForm.get('name')!.touched)">-->
+<!--      Please provide user name.-->
+<!--    </div>-->
+
+
   </div>
   <div>
     <label>
       Password
-      <input formControlName="password" placeholder="pass2word">
+      <input type="password"  formControlName="password" placeholder="pass2word">
     </label>
-    <div *ngIf="loginForm.get('name').invalid && (loginForm.get('name').dirty || loginForm.get('name').touched)">
-      Please provide user name.
-    </div>
+<!--    <div *ngIf="loginForm.get('name')!.invalid && (loginForm.get('name')!.dirty || loginForm.get('name')!.touched)">-->
+<!--      Please provide user name.-->
+<!--    </div>-->
   </div>
-  <button type="submit">Login</button>
+  <app-single-button buttonTitle="Login" type="submit" [rounderStyle]="true">Login</app-single-button>
 </form>
+
+<div class="col-sm-8 mb-3" style="text-align: right;" *ngIf="userForm">
+  <app-single-button buttonTitle="LogOut" (eventEmit)="logOut()" [rounderStyle]="true"></app-single-button>
+</div>
