--- a/APPS/tutget-main/tutget-ui/src/app/components/user/login/login.component.html
+++ b/APPS/tutget-main/tutget-ui/src/app/components/user/login/login.component.html
@@ -70,11 +70,11 @@
     </div>
     <div class="col-md-4 mb-3">
       <div class="label"><span style="color: red">*</span>Username:</div>
-      <input formControlName="userName" class="form-control" autocomplete="off" type="text"/>
+      <input id="userName" formControlName="userName" class="form-control" autocomplete="off" type="text"/>
     </div>
     <div class="col-md-4 mb-3">
       <div class="label"><span style="color: red">*</span>Password:</div>
-      <input formControlName="password" class="form-control" autocomplete="off" type="password" maxlength="20"/>
+      <input id="password" formControlName="password" class="form-control" autocomplete="off" type="password" maxlength="20"/>
     </div>
   </div>
   <div class="row">
