Added jwt, https, and various fixes/handling

--- a/APPS/tutget-main/tutget-ui/src/app/components/main/main.component.html
+++ b/APPS/tutget-main/tutget-ui/src/app/components/main/main.component.html
@@ -45,7 +45,7 @@ html{
 <header class="w3-display-container w3-wide bgimg w3-grayscale-min" id="home">
   <div class="w3-display-middle w3-text-white w3-center">
     <h1 *ngIf="!showMenu" class="w3-jumbo">TutGet, your trusted tuition platform.</h1>
-    <h1 *ngIf="showMenu" class="w3-jumbo">Welcome back, {{ activeUser?.firstName }}!</h1>
+    <h1 *ngIf="showMenu" class="w3-jumbo">Welcome back, {{ firstName }}!</h1>
   </div>
 </header>
 
