--- a/APPS/tutget-main/tutget-ui/src/app/components/error/error.component.html
+++ b/APPS/tutget-main/tutget-ui/src/app/components/error/error.component.html
@@ -2,6 +2,6 @@
   <img src="/assets/images/fail.jpg">
   <h1>Oops!</h1>
   <h3>Something went wrong here.</h3>
-  <div>{{ this.error.message }}</div>
+  <div>{{ isString(this.error.error) ? this.error.error : this.error.message }}</div>
   <button type="button" class="btn btn-primary mt-3" (click)="this.router.navigate(['/'])">Back to Home</button>
 </div>
